# geph5

./: .gitignore
binaries/geph5-client-gui/: Cargo.toml
binaries/geph5-client-gui/src/: client.yaml  lib.rs  main.rs  settings.rs
binaries/geph5-client-gui/src/daemon/: subproc.rs
binaries/geph5-client-gui/src/pac/: linux.rs  macos.rs
binaries/geph5-client-gui/src/tabs/: dashboard.rs
binaries/geph5-client-tauri/: Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json
binaries/geph5-client-tauri/front/: index.html  main.js  styles.css
binaries/geph5-client-tauri/icons/: icon.icns
binaries/geph5-client-tauri/src/: client.yaml  daemon.rs  lib.rs  login.rs  main.rs  settings.rs  store_cell.rs  timeseries.rs
binaries/geph5-client-tauri/src/daemon/: inline.rs  subproc.rs
binaries/geph5-client-tauri/src/pac/: macos.rs  macos_set_proxy.sh  windows - 命令方式.rs  windows.rs
