[package]
name = "geph5-client-tauri"
version = "0.1.0"
description = "A Tauri App of Geph Ui"
authors = ["Sam Zhou"]
edition = "2024"

[lib]
name = "gephui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
winapi = { version = "0.3", features = ["shellapi", "winuser"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
native-dialog = { version = "0.7.0", features = [
    "windows_dpi_awareness",
    "windows_visual_styles",
] }

poll-promise = "0.3.0"
smolscale = "0.4.7"
futures-util = "0.3.30"
smol = "2.0.0"
geph5-broker-protocol = { path = "../../libraries/geph5-broker-protocol" }
anyhow = "1.0.86"
geph5-client = { path = "../geph5-client", features = ["windivert"] }

once_cell = "1.19.0"
smol_str = { version = "0.2.2", features = ["serde"] }
serde_yaml = "0.9.34"
isocountry = "0.3.2"
app_dirs2 = "2.5.5"
moka = { version = "0.12.7", features = ["sync"] }

egui = "0.28.1"
